WIP: Support: Add vfs::OutputBackend to virtualize compiler outputs
Add `OutputBackend` to the `llvm::vfs` namespace to virtualize compiler
outputs. The primary interface includes the following API:

- `getDirectory()` returns an `OutputDirectory`, which is a proxy
  backend that uses the requested directory as a working directory.
- `createFile()` creates a file and returns `OutputFile` for writing to
  it.
- `createDirectory()` creates a directory and then calls
  `getDirectory()`. The default implementation assumes creating a
  directory is a no-op, to support backends that don't have a concept
  of a directories without files in them.
- `createUniqueFile()` and `createUniqueDirectory()`, versions of the
  above that avoid creating entitity names that already exist.
  (`StableUniqueEntityAdaptor<>` can be used by backends that don't have
  a way to check what exists.)

This patch contains a number of backends, including:

- NullOutputBackend, for silently ignoring all outputs.
- OnDiskOutputBackend, for writing to disk.
- InMemoryOutputBackend, for writing to an `InMemoryFileSystem`.
- MirroringOutputBackend, for writing to multiple backends.
- FilteringOutputBackend, for filtering which outputs get written to the
  underlying backend.

There are also a few helpers for creating other backends:

- `ProxyOutputBackend` forwards all calls to an underlying backend.
- `StableUniqueEntityAdaptor<>` adds stable implementations of
  `createUniqueFileImpl()` and `createUniqueDirectoryImpl()`.

The primary interface for `OutputFile` includes the following API:

- `takeOS()` returns a `std::unique_ptr<raw_pwrite_stream>` for writing
  (`getOS()` gives a raw pointer to the stream if it hasn't been taken).
- `close()` commits the file (to disk, in-memory, etc.).
- `getPath()` gets the path to the output.
- `~Output` erases the output if it hasn't been opened.

`OutputFile` has support for buffering content. One use case is for
concrete subclasses that don't support streams. A

--- a/llvm/lib/Support/CMakeLists.txt
+++ b/llvm/lib/Support/CMakeLists.txt
@@ -174,6 +174,7 @@ add_llvm_component_library(LLVMSupport
   NativeFormatting.cpp
   OptimizedStructLayout.cpp
   Optional.cpp
+  OutputBackend.cpp
   OutputConfig.cpp
   Parallel.cpp
   PluginLoader.cpp
