TypeSystemSwiftTypeRef: Make SwiftASTContext fallback switchable
via a new setting symbols.swift-typesystem-fallback

The new setting is currently on by default, prints a warning if the
fallback was engaged and successful, and is meant to eventually be
turned off when running the LLDB testsuite.

rdar://142512839

--- a/lldb/test/Shell/lit-lldb-init.in
+++ b/lldb/test/Shell/lit-lldb-init.in
@@ -9,3 +9,4 @@ settings set target.auto-apply-fixits false
 settings set target.inherit-tcc true
 settings set target.detach-on-error false
 settings set symbols.swift-validate-typesystem true
+settings set symbols.swift-typesystem-compiler-fallback true
